--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Codrops">
-	<link rel="shortcut icon" href="/favicon.824cf0c5.ico">
+	<link rel="shortcut icon" href="./favicon.824cf0c5.ico">
 	<link rel="stylesheet" href="https://use.typekit.net/jyi8res.css">
-	<link rel="stylesheet" type="text/css" href="/index.d046a61c.css">
+	<link rel="stylesheet" type="text/css" href="./index.d046a61c.css">
 	<script>document.documentElement.className = "js";
 var supportsCssVars = function() {
     var e, t = document.createElement("style");
@@ -35,7 +35,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</div> -->
 			<a class="back_to_about" href="https://yihanyozikua.github.io/tai_portfolio/#/about">
 				<!-- <svg viewBox="0 0 50 9" width="15%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg> -->
-				<img src="/arrow_left.6ca457cb.svg" style="margin-right: 1rem">
+				<img src="./arrow_left.6ca457cb.svg" style="margin-right: 1rem">
 				Back to About
 			</a>
 
@@ -231,10 +231,10 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 							<div class="footer_author_emoji">🤭</div>
 							<div class="footer_author_name">Tai, Tung-En (Direction/Design)</div>
 							<a class="footer_url_container" href="mailto:chloe981219@gmail.com?subject=Greetings from {Please Enter Your Name Here}" target="_blank">
-								<img class="footer_url_contents_prop" src="/envelope.f321ed18.svg">
+								<img class="footer_url_contents_prop" src="./envelope.f321ed18.svg">
 							</a>
 							<a class="footer_url_container" href="https://chloe981219.medium.com/" target="_blank">
-								<img class="footer_url_contents_prop" src="/medium.bf06916e.svg">
+								<img class="footer_url_contents_prop" src="./medium.bf06916e.svg">
 							</a>
 						</div>
 					</div>
@@ -244,7 +244,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 							<div class="footer_author_emoji">🥸</div>
 							<div class="footer_author_name">Hsiao, Yi-Han (Engineering)</div>
 							<a class="footer_url_container" href="https://github.com/yihanYozikua" target="_blank">
-								<img class="footer_url_contents_prop" src="/github.31468c0a.svg">
+								<img class="footer_url_contents_prop" src="./github.31468c0a.svg">
 							</a>
 						</div>
 					</div>
@@ -253,7 +253,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 		</div>
 		<div class="content">
 			<button class="back">
-				<img src="/arrow_left.6ca457cb.svg" style="margin-right: 1rem">
+				<img src="./arrow_left.6ca457cb.svg" style="margin-right: 1rem">
 				Back to list
 			</button>
 			<div class="content__item" id="item-1">
@@ -634,7 +634,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 		</div>
 	</main>
 	<!-- Excerpts from: Propaganda (1928) by Edward Bernays -->
-	<script src="/index.739bf03c.js" defer=""></script>
+	<script src="./index.739bf03c.js" defer=""></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>AOS.init({
     // Global settings:
