try to fix the overflow issue

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<title>Tai's Portfolio</title>
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="Codrops" />
+	<meta name="description" content="Tai, Tung-En's Portfolio" />
+	<meta name="keywords" content="Tai, Tung-En" />
+	<meta name="author" content="Tai, Tung-En & Hsiao, Yi-Han" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://use.typekit.net/jyi8res.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
@@ -763,7 +763,7 @@
 			var el = document.getElementById("cursor_sec");
 			el.innerHTML = '👆';
 			// el.style.fontSize = '3rem';
-			el.style.marginLeft = '-.5rem';
+			el.style.marginLeft = '-.25rem';
 			el.style.marginTop = '-1rem';
 			// el.style.transition = 'font-size .3s ease-in-out';
 		}
@@ -771,7 +771,7 @@
 			var el = document.getElementById("cursor_sec");
 			el.innerHTML = '🐭';
 			// el.style.fontSize = '2rem';
-			el.style.marginLeft = '-.5rem';
+			el.style.marginLeft = '-.25rem';
 			el.style.marginTop = '-1rem';
 			// el.style.transition = 'font-size .3s ease-in-out';
 		}
