fix the disappear images

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,8 @@
 				data-aos-offset="0"
 				data-aos-duration="300"
 				data-aos-once="false">
-				<div class="grid__cell-img">
+				<div class="grid__cell-img"
+				>
 					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)" data-item="item-1"></div>
 				</div>
 			</div>
