fix the popping grid--mini

--- a/src/index.html
+++ b/src/index.html
@@ -618,7 +618,7 @@
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.png);"></div>
 				</nav>
 			</div>
-			<nav class="grid grid--mini" style="width: 10vw; height: 22vh; bottom: 0;">
+			<nav class="grid grid--mini" style="position: absolute; width: 10vw; height: 22vh; bottom: 0;">
 				<div class="grid__cell grid__cell-c1-r1">
 					<div class="grid__cell-img">
 						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)"></div>
