add top right button to show grid mini in mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -346,6 +346,116 @@
 			</div>
 		</div>
 		<div class="content">
+			<button class="mobile_show_grid_mini" onclick="mobile_show_grid_mini()">
+				<img src="./img/click_to_show.svg" class="mobile_show_grid_mini_prop"></img>
+			</button>
+			<nav class="grid grid--mini">
+				<div class="grid__cell grid__cell-c1-r1">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r1">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c4-r1">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c1-r2">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r2">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r3">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c4-r3">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c1-r4">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_8.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r4">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_9.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r4">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
+					</div>
+				</div>
+				<!-- <div class="grid__cell grid__cell-c3-r5">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
+					</div>
+				</div> -->
+				<div class="grid__cell grid__cell-c4-r4">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_11.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c1-r5">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_12.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r5">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_13.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c4-r5">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_14.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c1-r6">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_15.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r6">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r6">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_17.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r7">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_18.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r7">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_19.png)"></div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c4-r7">
+					<div class="grid__cell-img">
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_20.png)"></div>
+					</div>
+				</div>
+			</nav>
 			<button class="back">
 				<img src="./img/arrow_left.svg" style="margin-right: 1rem;"></img>
 				Back to list
@@ -618,113 +728,7 @@
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.png);"></div>
 				</nav>
 			</div>
-			<nav class="grid grid--mini" style="position: absolute; width: 10vw; height: 22vh; bottom: 0;">
-				<div class="grid__cell grid__cell-c1-r1">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c3-r1">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_2.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c4-r1">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_3.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c1-r2">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_4.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c2-r2">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c2-r3">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c4-r3">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c1-r4">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_8.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c3-r4">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_9.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c2-r4">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
-					</div>
-				</div>
-				<!-- <div class="grid__cell grid__cell-c3-r5">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)"></div>
-					</div>
-				</div> -->
-				<div class="grid__cell grid__cell-c4-r4">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_11.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c1-r5">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_12.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c3-r5">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_13.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c4-r5">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_14.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c1-r6">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_15.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c2-r6">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c3-r6">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_17.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c2-r7">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_18.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c3-r7">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_19.png)"></div>
-					</div>
-				</div>
-				<div class="grid__cell grid__cell-c4-r7">
-					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_20.png)"></div>
-					</div>
-				</div>
-			</nav>
+			
 		</div>
 	</main>
 	<!-- Excerpts from: Propaganda (1928) by Edward Bernays -->
@@ -755,6 +759,7 @@
 		});
 	</script>
 	<script>
+		let click_mobile_show_grid_mini = false;
 		function customCursor(event){
 			var el = document.getElementById("cursor_sec");
 			el.style.top = event.clientY + window.pageYOffset + "px";
@@ -789,6 +794,39 @@
 		
 		window.addEventListener('mousemove', customCursor);
 		window.addEventListener('scroll', customCursor);
+
+
+		function mobile_show_grid_mini(){
+			if(!click_mobile_show_grid_mini){
+				console.log('show grid');
+				document.getElementsByClassName('grid--mini')[0].style.opacity = '1';
+				document.getElementsByClassName('grid--mini')[0].style.visibility = 'visible';
+				document.getElementsByClassName('grid--mini')[0].style.transition = 'all .3s ease-in-out';
+				document.getElementsByClassName('mobile_show_grid_mini')[0].innerHTML = 'x';
+				click_mobile_show_grid_mini	= true;
+			}
+			else{
+				console.log('close grid');
+				document.getElementsByClassName('grid--mini')[0].style.opacity = '0';
+				document.getElementsByClassName('grid--mini')[0].style.visibility = 'hidden';
+				document.getElementsByClassName('grid--mini')[0].style.transition = 'all .3s ease-in-out';
+				document.getElementsByClassName('mobile_show_grid_mini')[0].innerHTML = `<svg width="26" height="21" viewBox="0 0 26 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+																																									<rect x="7" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect y="5.19998" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect y="15.6003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="7" y="5.19998" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="6.68652" y="10.4003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="6.68652" y="15.6003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="13.3716" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="13.3716" y="10.4003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="20.0571" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="20.0571" y="10.4003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									<rect x="20.0571" y="15.6003" width="5.94297" height="4.45723" fill="#858A8B"/>
+																																									</svg>`;
+				click_mobile_show_grid_mini = false;
+			}
+			
+		}
 	</script>
 </body>
 
