add hight resolution img

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 				data-aos-once="false">
 				<div class="grid__cell-img"
 				>
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)" data-item="item-1"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.jpg)" data-item="item-1"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r1"
@@ -107,7 +107,7 @@
 				data-aos-duration="300"
 				data-aos-once="false">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)" data-item="item-5"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.jpg)" data-item="item-5"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c2-r3"
@@ -127,7 +127,7 @@
 				data-aos-duration="300"
 				data-aos-once="false">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)" data-item="item-7"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.jpg)" data-item="item-7"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c1-r4"
@@ -352,7 +352,7 @@
 			<nav class="grid grid--mini">
 				<div class="grid__cell grid__cell-c1-r1">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.png)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_1.jpg)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c3-r1">
@@ -372,7 +372,7 @@
 				</div>
 				<div class="grid__cell grid__cell-c2-r2">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.png)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_5.jpg)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c2-r3">
@@ -382,7 +382,7 @@
 				</div>
 				<div class="grid__cell grid__cell-c4-r3">
 					<div class="grid__cell-img">
-						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.png)"></div>
+						<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_7.jpg)"></div>
 					</div>
 				</div>
 				<div class="grid__cell grid__cell-c1-r4">
@@ -482,7 +482,7 @@
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_1.png);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_1.jpg);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_3.png);"></div>
 				</nav>
 			</div>
@@ -509,7 +509,7 @@
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_3.png);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_5.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_5.jpg);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-5">
@@ -534,8 +534,8 @@
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_5.png);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_7.png);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_5.jpg);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_7.jpg);"></div>
 				</nav>
 			</div>
 			<div class="content__item" id="item-7">
@@ -562,7 +562,7 @@
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
-					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_7.png);"></div>
+					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_7.jpg);"></div>
 					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_9.png);"></div>
 				</nav>
 			</div>
@@ -725,7 +725,7 @@
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
 					<div class="slide-nav__img slide-nav__img--prev" style="background-image:url(img/hashtag_19.png);"></div>
-					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.png);"></div>
+					<div class="slide-nav__img slide-nav__img--next" style="background-image:url(img/hashtag_1.jpg);"></div>
 				</nav>
 			</div>
 			
