--- a/src/index.html
+++ b/src/index.html
@@ -305,8 +305,7 @@
 			<div class="footer_top_container">
 				<div class="footer_title_container">
 					<span class="footer_title_prop">After design</span>
-					<span class="footer_title_prop">All will be</span>
-					<span class="footer_title_prop">beautiful days</span>
+					<span class="footer_title_prop">All the best days</span>
 				</div>
 				<div class="footer_nav_container">
 					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio/#/about" target="_self">About</a>
@@ -651,8 +650,7 @@
 				<p class="content__item-text">
 					元気な時も、そうでない時。<br style="line-height: .5rem;"></br>
 					少し沈む時も、そうでない時。
-					気づいたら海に向かう自分がいます。海との思い出も、撮り溜めしている写真もたくさん持っているので、
-					趣味でいつか海をテーマにしたサイトを運営したいとずっと考えています。
+					気づいたら海に向かう自分がいます。海との思い出も、撮り溜めしている写真もたくさん持っているので、趣味でいつか海をテーマにしたサイトを運営したいとずっと考えています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
