fix the bg-position

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="apple-touch-icon" href="ogp.png" />
 	<title>Tai's Portfolio</title>
 	<meta name="description" content="Tai, Tung-En's Portfolio" />
 	<meta name="keywords" content="Tai, Tung-En" />
@@ -117,7 +118,7 @@
 				data-aos-duration="300"
 				data-aos-once="false">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png)" data-item="item-6"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_6.png); background-position: center 30%;" data-item="item-6"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c4-r3"
@@ -157,7 +158,7 @@
 				data-aos-duration="300"
 				data-aos-once="false">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png)" data-item="item-10"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_10.png); background-position: center bottom;" data-item="item-10"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c1-r3 grid__cell--padded">
