temporarily disable the show pad button

--- a/src/index.html
+++ b/src/index.html
@@ -346,9 +346,9 @@
 			</div>
 		</div>
 		<div class="content">
-			<button class="mobile_show_grid_mini" onclick="mobile_show_grid_mini()">
+			<!-- <button class="mobile_show_grid_mini" onclick="mobile_show_grid_mini()">
 				<img src="./img/click_to_show.svg" class="mobile_show_grid_mini_prop"></img>
-			</button>
+			</button> -->
 			<nav class="grid grid--mini">
 				<div class="grid__cell grid__cell-c1-r1">
 					<div class="grid__cell-img">
