try to fix the scroll issue

--- a/src/index.html
+++ b/src/index.html
@@ -758,6 +758,10 @@
 		});
 	</script>
 	<script>
+		window.scrollTo({
+			top: 0,
+			behavior: 'smooth'
+		});
 		let click_mobile_show_grid_mini = false;
 		function customCursor(event){
 			var el = document.getElementById("cursor_sec");
