--- a/src/index.html
+++ b/src/index.html
@@ -324,10 +324,10 @@
 						<div class="footer_author_detailed_container">
 							<div class="footer_author_emoji">🤭</div>
 							<div class="footer_author_name">Tai, Tung-En (Direction/Design)</div>
-							<a class="footer_url_container" href="mailto:chloe981219@gmail.com?subject=Greetings from {Please Enter Your Name Here}" target="_blank">
+							<a href="mailto:chloe981219@gmail.com?subject=Greetings from {Please Enter Your Name Here}" target="_blank">
 								<img class="footer_url_contents_prop" src="img/icons/envelope.svg"></img>
 							</a>
-							<a class="footer_url_container" href="https://chloe981219.medium.com/" target="_blank">
+							<a href="https://chloe981219.medium.com/" target="_blank">
 								<img class="footer_url_contents_prop" src="img/icons/medium.svg"></img>
 							</a>
 						</div>
@@ -337,7 +337,7 @@
 						<div class="footer_author_detailed_container">
 							<div class="footer_author_emoji">🥸</div>
 							<div class="footer_author_name">Hsiao, Yi-Han (Engineering)</div>
-							<a class="footer_url_container" href="https://github.com/yihanYozikua" target="_blank">
+							<a href="https://github.com/yihanYozikua" target="_blank">
 								<img class="footer_url_contents_prop" src="img/icons/github.svg"></img>
 							</a>
 						</div>
