--- a/src/index.html
+++ b/src/index.html
@@ -794,6 +794,11 @@
 			urls.addEventListener('mousemove', hoverInCursor);
 			urls.addEventListener('mouseleave', hoverOutCursor);
 		});
+
+		Array.prototype.forEach.call(document.getElementsByClassName('back'), function(b){
+			b.addEventListener('mousemove', hoverInCursor);
+			b.addEventListener('mouseleave', hoverOutCursor);
+		});
 		
 		window.addEventListener('mousemove', customCursor);
 		window.addEventListener('scroll', customCursor);
