--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 					<p class="frame__title oh"><span class="oh__inner">How should we know a person without the education or work exprience?</span></p>
 				</div>
 			</div> -->
-			<a class="back_to_about" href="https://yihanyozikua.github.io/tai_portfolio/#/about">
+			<a class="back_to_about" href="https://tai-tung-en.github.io/tai_portfolio/">
 				<!-- <svg viewBox="0 0 50 9" width="15%" style="margin-right: 1rem;"><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg> -->
 				<img src="./img/arrow_left.svg" style="margin-right: 1rem;"></img>
 				Back to About
@@ -309,9 +309,9 @@
 					<span class="footer_title_prop">All the best days</span>
 				</div>
 				<div class="footer_nav_container">
-					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio/#/about" target="_self">About</a>
+					<a class="footer_nav_prop" href="https://tai-tung-en.github.io/tai_portfolio/#/about" target="_self">About</a>
 					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio_hashtags/" target="_self">Special content-#hashtags of me</a>
-					<a class="footer_nav_prop" href="https://yihanyozikua.github.io/tai_portfolio/#/works" target="_self">Works</a>
+					<a class="footer_nav_prop" href="https://tai-tung-en.github.io/tai_portfolio/#/works" target="_self">Works</a>
 					<a class="footer_nav_prop" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">Back to top</a>
 				</div>
 			</div>
