--- a/src/index.html
+++ b/src/index.html
@@ -504,7 +504,7 @@
 				<span class="content__item-number oh"><span class="oh__inner"></span></span>
 				<h2 class="content__item-heading oh"><span class="oh__inner">#広告専攻</span></h2>
 				<p class="content__item-text">
-					台湾の大学では広告学科専攻で、マーケティングとブランディングを勉強しました。。
+					台湾の大学では広告学科専攻で、マーケティングとブランディングを勉強しました。
 					学校でのグループ課題も、メディア代理店でのインターンシップのプロジェクトも、ターゲット分析を担当することが多かったがゆえに、人にとても興味があります。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
@@ -558,7 +558,7 @@
 				<p class="content__item-text">
 					日本に来て初めて知った、みんなはよく血液型を話題にすること。（台湾では星座を語ることが多いです。）
 					よくA型と思われますが、実は典型的なB型である自覚があります。
-					好奇心旺盛、マイペース、好き嫌いがはっきりなど、血液型分析サイトに書かれた特徴にを当てはまります。
+					好奇心旺盛、マイペース、好き嫌いがはっきりなど、血液型分析サイトに書かれた特徴に当てはまります。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
@@ -664,8 +664,8 @@
 				<h2 class="content__item-heading oh"><span class="oh__inner">#Apple愛用</span></h2>
 				<p class="content__item-text">
 					これは多くな方に共感してもらえると思います。
-					初めはiPhone、次はMacBookとiPad。イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPodProを購入。
-					もうアップルの沼から離れません。今はAppleWatchを狙っています。
+					初めはiPhone、次はMacBookとiPad。イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPods_Proを購入。
+					もうアップルの沼から離れません。今はApple<span>_</span>Watchを狙っています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
