fix the position of apple

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
 				data-aos-duration="300"
 				data-aos-once="false">
 				<div class="grid__cell-img">
-					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png)" data-item="item-16"></div>
+					<div class="grid__cell-img-inner" style="background-image:url(img/hashtag_16.png); background-position: bottom;" data-item="item-16"></div>
 				</div>
 			</div>
 			<div class="grid__cell grid__cell-c3-r6"
