--- a/src/index.html
+++ b/src/index.html
@@ -664,8 +664,8 @@
 				<h2 class="content__item-heading oh"><span class="oh__inner">#Apple愛用</span></h2>
 				<p class="content__item-text">
 					これは多くな方に共感してもらえると思います。
-					初めはiPhone、次はMacBookとiPad。イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPods_Proを購入。
-					もうアップルの沼から離れません。今はApple<span>_</span>Watchを狙っています。
+					初めはiPhone、次はMacBookとiPad。イヤホン買う時そろそろ別のものにしようと思い、いろいろ試したけど、結局AirPods Proを購入。
+					もうアップルの沼から離れません。今はApple Watchを狙っています。
 				</p>
 				<!-- <a class="content__item-link oh"><span class="oh__inner">View more</span></a> -->
 				<nav class="slide-nav">
